# Algorithmization-and-programming

./: CMakeLists.txt
lab10_1_A/: lab10_1_A  lab10_1_A.cpp  lab10_1_A.h  lab10_1_A_unit_test.cpp
lab10_1_B/: lab10_1_B  lab10_1_B.cpp  lab10_1_B.h  lab10_1_B_unit_test.cpp
lab10_2_A/: lab10_2_A  lab10_2_A.cpp  lab10_2_A.h  lab10_2_A_unit_test.cpp
lab10_3/: lab10_3  lab10_3.cpp  lab10_3.h  lab10_3_unit_test.cpp  мешканці
lab11_1_1/: file_1  lab11_1_1  lab11_1_1.c  lab11_1_1.h  lab11_1_1_unit_test.c
lab11_1_2/: lab11_1_2  lab11_1_2.cpp  lab11_1_2.h  lab11_1_2_unit_test.cpp
lab11_2/: lab11_2  lab11_2.cpp  lab11_2.h  lab11_2_unit_test.cpp  t_1  t_2
lab11_3/: lab11_3.cpp  lab11_3.h  lab11_3_unit_test.cpp  дані  мешканці
lab12_1/: lab12_1  lab12_1.cpp  lab12_1.h  lab12_1_unit_test.cpp
lab12_4/: lab12_4.cpp  lab12_4.h  lab12_4_unit_test.cpp
lab7_1/: lab7_1  lab7_1.cpp  lab7_1.h  lab7_1_unit_test.cpp
lab7_1_rec/: lab7_1_rec  lab7_1_rec.cpp  lab7_1_rec.h  lab7_1_unit_test_rec.cpp
lab7_2/: lab7_2.cpp  lab7_2.h  lab7_2_unit_test.cpp
lab7_2_rec/: lab7_2_rec.cpp  lab7_2_rec.h  lab7_2_unit_test_rec.cpp
lab7_3/: lab7_3  lab7_3.cpp  lab7_3.h  lab7_3_unit_test.cpp
lab7_3_rec/: lab7_3_rec  lab7_3_rec.cpp  lab7_3_rec.h  lab7_3_unit_test_rec.cpp
lab8_1_char/: lab8_1_char  lab8_1_char.cpp  lab8_1_char.h  lab8_1_unit_test_char.cpp
lab8_1_it/: lab8  lab8_1  lab8_1.cpp  lab8_1_it.h  lab8_1_unit_test_it.cpp
lab8_1_rec/: lab8_1_rec  lab8_1_rec.cpp  lab8_1_rec.h  lab8_1_unit_test_rec.cpp
lab8_1_str/: lab8_1_str  lab8_1_str.cpp  lab8_1_str.h  lab8_1_unit_test_str.cpp
lab8_1_str_r/: lab8_1_str_r.cpp
lab8_2/: lab8_2  lab8_2.cpp  lab8_2.h  lab8_2_unit_test.cpp
lab9_1/: dod.cpp  lab9_1  lab9_1.cpp  lab9_1_unit_test.cpp  sum.cpp  sum.h  var.cpp  var.h
lab9_2_1/: lab9_2_1  lab9_2_1.cpp  lab9_2_1.h  lab9_2_1_unit_test.cpp
lab9_2_2/: input.txt  lab9_2_2  lab9_2_2.cpp  lab9_2_2.h  lab9_2_2_unit_test.cpp
